--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ dist: xenial
 python:
 - '3.7'
 install:
+- git clone https://github.com/jorana/wimprates
+- python wimprates/setup.py develop
 - pip install -r requirements.txt
