--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
 - '3.7'
 install:
 - git clone https://github.com/jorana/wimprates
-- python wimprates/setup.py develop
+- pip install -e wimprates
 - pip install -r requirements.txt
