--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
 - git clone https://github.com/jorana/wimprates
 - pip install -e wimprates
 - pip install -r requirements.txt
-script: python test/test_all.py
+script: python tests/test_all.py
