mayor reorganization, setup.py install now enabled, mayor bugfix in the approximate ll where only first order term in stirlings approximation was taken into account

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 DirectDmTargets/__pycache__/*
 *.pyc
 2019*
-notebooks/*
+notebooks/old/*
 DirectDmTargets/__*
 backups/*
 submit_to_stoomboot*
@@ -11,3 +11,5 @@ results/nestle*
 results/emcee*
 .ipynb_checkpoints/*
 .idea*
+.eggs/*
+DirectDmTargets.egg-info/*
