--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ results/test*
 results/nestle*
 results/emcee*
 .ipynb_checkpoints/*
+notebooks/.ipynb_checkpoints/*
 .idea*
 .eggs/*
 DirectDmTargets.egg-info/*
