--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: python
 dist: xenial
 python:
-- '3.7'
+- '3.8'
 install:
 - git clone https://github.com/jorana/wimprates
 - pip install -e wimprates
 - pip install -r requirements.txt
+- git clone https://github.com/jorana/verne.git
+- conda install -c conda-forge multinest
+- conda install -c conda-forge/label/cf201901 multinest
+- conda install -c anaconda mpi4py
+- git clone https://github.com/JohannesBuchner/PyMultiNest
+- pip install -e PyMultiNest
 - python setup.py install
 script: python tests/test_all.py
