--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ before_install:
 
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
-  - conda update --yes conda
+  - yes | bash ./miniconda.sh
+  - ls
 
 install:
   # We just set up a conda environment with the right Python version. This
