--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,16 @@ before_install:
 
   - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
-  - bash ./miniconda.sh -b
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda3/bin:$PATH
+  - conda update --yes conda
 
 install:
+
   # We just set up a conda environment with the right Python version. This
   # should not need changing.
-
-  - miniconda3/condabin/conda create create --yes -n test python=3.8
-  - source miniconda3/bin/activate test
+  - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
+  - source activate test
   - git clone https://github.com/jorana/wimprates
   - pip install -e wimprates
   - pip install -r requirements.txt
