--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,12 @@ corner
 numericalunits
 multihist
 seaborn
+coveralls
+hypothesis
+jupyter-resource-usage   # Memory viewer for notebooks
+line_profiler
+parso==0.7.1
+pytest
+pytest-runner
+scikit-learn
+tqdm
