--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,11 @@ seaborn
 coveralls
 hypothesis
 jupyter-resource-usage   # Memory viewer for notebooks
+cmake
+scikit-build
+scikit-learn
 line_profiler
 parso==0.7.1
 pytest
 pytest-runner
-scikit-learn
 tqdm
