--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -34,10 +34,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Install conda stuff on linux
         if: matrix.os == 'ubuntu-latest'
-          run: bash ../scripts/install_on_linux.sh
+        run: |
+            .github/scripts/install_on_linux.sh
       - name: Install conda stuff on windows
         if: matrix.os == 'windows-latest'
-          run: |
+        run: |
             yes | conda install -c conda-forge/label/cf202003 multinest
             yes | conda install -c anaconda mpi4py
             yes | conda install -c conda-forge emcee
