--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -35,12 +35,13 @@ jobs:
       - name: Install conda stuff on linux
         if: matrix.os == 'ubuntu-latest'
         run: |
-            .github/scripts/install_on_linux.sh
+             ls
+             ls .github
+             ls .github/scripts
+             bash .github/scripts/install_on_linux.sh
       - name: Install conda stuff on windows
         if: matrix.os == 'windows-latest'
         run: |
-            yes | conda install -c conda-forge/label/cf202003 multinest
-            yes | conda install -c anaconda mpi4py
             yes | conda install -c conda-forge emcee
             yes | pip install git+https://github.com/jorana/wimprates
             yes | pip install git+https://github.com/jorana/verne
