--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -54,7 +54,9 @@ jobs:
           ls $LD_LIBRARY_PATH
       - name: Test package
         run: |
-          ls $LD_LIBRARY_PATH
+          echo $LD_LIBRARY_PATH
+          export $LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
+          echo $LD_LIBRARY_PATH
           pytest
       - name: Build coverage file
         run: |
