--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -60,6 +60,7 @@ jobs:
           pytest
       - name: Build coverage file
         run: |
+          export LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
           pytest --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
       - name: Comment coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
