--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Setup python
       uses: actions/setup-python@v2 # https://github.com/marketplace/actions/setup-miniconda
       with:
-        python-version: [3.8]
+        python-version: 3.8
     - uses: conda-incubator/setup-miniconda@v2
       with:
         auto-activate-base: true
