--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -53,12 +53,15 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           pytest
+      - name: Build coverage file (windows)
+          run: |
+            pytest --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
       - name: Test package (linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
           export LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
           pytest
-      - name: Build coverage file
+      - name: Build coverage file (linux)
         run: |
           export LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
           pytest --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
