--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           pytest
       - name: Build coverage file (windows)
+        if: matrix.os == 'ubuntu-latest'
         run: |
             pytest --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
       - name: Test package (linux)
