fix coveralls for gitgub

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -35,4 +35,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
       run: |
-        coveralls
+        export LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
+        coveralls --service=github
