--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -33,9 +33,8 @@ jobs:
       run: python setup.py develop
     - name: Coveralls
       env:
-        GITHUB_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
       run: |
         export LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
         coverage run --source=DirectDmTargets setup.py test
-        coveralls --service=github
+        coveralls
