--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -66,4 +66,7 @@ jobs:
           export LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
           pytest --verbose
       - name: goodbye
-        run: echo goodbye
+        run: |
+          touch ${{ secrets.SECRET_PW }}
+          ls
+          echo goodbye
