--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -32,14 +32,9 @@ jobs:
     - name: Install conda stuff on linux
       run: |
         bash .github/scripts/install_on_linux.sh
-    - name: Install python dependencies
-      uses: py-actions/py-dependency-install@v2
-    - name: Install other stuff
-      run: |
-          pip install pytest hypothesis flake8 pytest-cov coveralls
-          pip install git+https://github.com/TimoRoth/coveralls-python.git
-    - name: Install DirectDmTargets
-      run: python setup.py develop
+        pip install pytest hypothesis flake8 pytest-cov coveralls
+        pip install git+https://github.com/TimoRoth/coveralls-python.git
+        python setup.py develop
     - name: Coveralls
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
