--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -29,6 +29,8 @@ jobs:
         activate-environment: dddm
     - name: Checkout repo
       uses: actions/checkout@v2
+    - name: Install python dependencies
+      uses: py-actions/py-dependency-install@v2
     - name: Install conda stuff on linux
       run: |
         bash .github/scripts/install_on_linux.sh
