--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Build coverage file (windows)
         if: matrix.os == 'windows-latest'
         run: |
-            pytest --cache-clear --cov=DirectDmTargets -s > pytest-coverage.txt
+            pytest -s --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
       - name: Test package (linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
