Small tweaks to context and verne interfacing (#30)
* Make verne interface simpler

* Small change in tempfolder usage for multinest

* Automated autopep8 fixes

* Update README.md

* add shielding tests

* Automated autopep8 fixes

* reinstate tests

* fix check folder for file

* Simplify tests

* Fix test

* fix windows paths

* Automated autopep8 fixes

* do all the tests

* fix tests

* fix other test

* split tests and make more verbose

* Automated autopep8 fixes

* Ignore errors in loading

* Automated autopep8 fixes

* don't add notebooks

* fix typo

* don't run tests for very short

* address comments

* Automated autopep8 fixes

* use logger update tests

* Automated autopep8 fixes

* fix install and tests

* Automated autopep8 fixes

* decrease code complexity

* don't upload notebooks

* Automated autopep8 fixes

* fix typo

* small tweak context

--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -40,7 +40,8 @@ jobs:
         run: |
           pip install emcee
           pip install git+https://github.com/jorana/wimprates
-          pip install git+https://github.com/jorana/verne
+          git clone https://github.com/jorana/verne
+          pip install -e verne
           pip install git+https://github.com/JohannesBuchner/PyMultiNest
       - name: Install conda stuff on linux
         if: matrix.os == 'ubuntu-latest'
@@ -49,21 +50,17 @@ jobs:
       - name: Install python dependencies
         uses: py-actions/py-dependency-install@v2
       - name: Install other stuff
-        run: pip install pytest hypothesis flake8 pytest-cov
-      - name: Install DirectDmTargets
-        run: python setup.py develop
-      - name: Test package (windows)
-        if: matrix.os == 'windows-latest'
         run: |
-          pytest --verbose
+          pip install pytest hypothesis flake8 pytest-cov
+          python setup.py develop
       - name: Build coverage file (windows)
         if: matrix.os == 'windows-latest'
         run: |
-            pytest --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
+            pytest -s --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
       - name: Test package (linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
           export LD_LIBRARY_PATH=/home/runner/work/DirectDmTargets/DirectDmTargets/MultiNest/lib
-          pytest --verbose
+          pytest --verbose -s
       - name: goodbye
         run: echo goodbye
