--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -29,17 +29,14 @@ jobs:
         activate-environment: dddm
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Install conda stuff on linux
-      run: |
-        bash .github/scripts/install_on_linux.sh
     - name: Install python dependencies
       uses: py-actions/py-dependency-install@v2
-    - name: Install other stuff
+    - name: Install requirements
       run: |
-          pip install pytest hypothesis flake8 pytest-cov coveralls
-          pip install git+https://github.com/TimoRoth/coveralls-python.git
-    - name: Install DirectDmTargets
-      run: python setup.py develop
+        bash .github/scripts/install_on_linux.sh
+        pip install pytest hypothesis flake8 pytest-cov coveralls
+        pip install git+https://github.com/TimoRoth/coveralls-python.git
+        python setup.py develop
     - name: Coveralls
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
