--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,10 @@ updates:
     # Raise all npm pull requests with an assignee
     assignees:
       - jorana
+  - package-ecosystem: pip
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 25
+    assignees:
+      - jorana
