--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build coverage file (windows)
         if: matrix.os == 'windows-latest'
         run: |
-            pytest --cache-clear --cov=DirectDmTargets > pytest-coverage.txt
+            pytest --verbose
       - name: Test package (linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
